[gd_scene load_steps=8 format=2]

[ext_resource path="res://asset/charactor/Jango_front.png" type="Texture" id=1]
[ext_resource path="res://asset/charactor/Shader.png" type="Texture" id=2]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 16 )

[sub_resource type="Animation" id=3]
resource_name = "move_motion"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CharactorPostion:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.297302, 3 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shader:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.3, 3 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "stop"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CharactorPostion:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shader:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.948, -0.916 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 3 )
speed = 200.0

[node name="CharactorPostion" type="Position2D" parent="."]

[node name="CharactorImg" type="Sprite" parent="CharactorPostion"]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )

[node name="CollisionRange" type="CollisionShape2D" parent="."]
modulate = Color( 0.0235294, 0.105882, 1, 1 )
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="CatchDetector" type="Area2D" parent="."]
modulate = Color( 0.301961, 0.988235, 0.0862745, 1 )
position = Vector2( 0, -8 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchDetector"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move_motion = SubResource( 3 )
anims/stop = SubResource( 4 )

[node name="Shader" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.184314 )
position = Vector2( -2.38419e-07, -4 )
scale = Vector2( 0.948, -0.916 )
z_index = -1
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="ObjectPosition" type="Position2D" parent="."]
z_index = -1
[connection signal="body_entered" from="CatchDetector" to="." method="_on_object_body_entered"]
[connection signal="body_exited" from="CatchDetector" to="." method="_on_object_body_exited"]
